fixed user button being slightly too big

--- a/src/components/navigation-bar/NavBar.css
+++ b/src/components/navigation-bar/NavBar.css
@@ -7,7 +7,7 @@
 }
 
 .user-icon i{
-    padding: 5px;
+    padding: 3px;
     align-items: center;
     justify-content: center;
 }
